vlib/v/checker/tests/unwrapped_option_result_in_operation_err.out
vlib/v/checker/tests/unwrapped_option_result_in_operation_err.vv:3:6: error: unwrapped result cannot be used with `!in`
    1 | fn main() {
    2 |     list := ['string']
    3 |     _ = return_string_or_error() !in list
      |         ~~~~~~~~~~~~~~~~~~~~~~~~
    4 |     _ = return_string_or_error() in list
    5 |     _ = return_string_or_none() in list
vlib/v/checker/tests/unwrapped_option_result_in_operation_err.vv:4:6: error: unwrapped result cannot be used with `in`
    2 |     list := ['string']
    3 |     _ = return_string_or_error() !in list
    4 |     _ = return_string_or_error() in list
      |         ~~~~~~~~~~~~~~~~~~~~~~~~
    5 |     _ = return_string_or_none() in list
    6 |     _ = return_string_or_error() !in list
vlib/v/checker/tests/unwrapped_option_result_in_operation_err.vv:5:6: error: unwrapped option cannot be used with `in`
    3 |     _ = return_string_or_error() !in list
    4 |     _ = return_string_or_error() in list
    5 |     _ = return_string_or_none() in list
      |         ~~~~~~~~~~~~~~~~~~~~~~~
    6 |     _ = return_string_or_error() !in list
    7 | }
vlib/v/checker/tests/unwrapped_option_result_in_operation_err.vv:6:6: error: unwrapped result cannot be used with `!in`
    4 |     _ = return_string_or_error() in list
    5 |     _ = return_string_or_none() in list
    6 |     _ = return_string_or_error() !in list
      |         ~~~~~~~~~~~~~~~~~~~~~~~~
    7 | }
    8 |
