vlib/v/checker/tests/unwrapped_option_result_in_operation_err.vv
fn main() {
	list := ['string']
	_ = return_string_or_error() !in list
	_ = return_string_or_error() in list
	_ = return_string_or_none() in list
	_ = return_string_or_error() !in list
}

fn return_string_or_error() !string {
	return ''
}

fn return_string_or_none() ?string {
	return ''
}
